--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "db:generate": "prisma generate",
+    "db:generate": "dotenv -e .env.local -- prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:setup": "./scripts/setup-db.sh"
@@ -17,20 +17,19 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
     "@stripe/stripe-js": "^8.2.0",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
-    "canvas": "^3.2.0",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^6.7.0",
-    "pdf-to-img": "^5.0.0",
-    "pdfjs-dist": "^5.4.296",
+    "pdf2json": "^4.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
-    "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -40,6 +39,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "prisma": "^6.18.0",
